# PotassiumEngine

./: .gitmodules  ;  CMakeLists.txt  adsf  colorscheme.txt  giggidee.scene  imgui.ini  script.lua
.cache/clangd/index/: Application.hpp.1E7E7BA07D1EB6BC.idx  Application.hpp.EEE090CA9CBBE1FE.idx  AssetBrowser.hpp.91C3B0924D4DD1D7.idx  AssetViewer.hpp.21490E0192F10DE7.idx  Camera.hpp.683B5B730C55013B.idx  Camera.hpp.BCDEC36CD4E6E223.idx  CodeGen.cpp.448189EB9E610700.idx  CodeGen.cpp.68BD6C0A16D43399.idx  CodeGen.hpp.459CA61E7F2F7DE3.idx  CodeGen.hpp.973B9ED68CFC8662.idx  Components.hpp.CD5CF63E93318EC3.idx  Components.hpp.ED369C0CD1B01032.idx  Core.hpp.3B8FDF944FAE64A8.idx  Core.hpp.79A955CFBDCCCE33.idx  FontAwesome.h.6BFCDE727AD45EC0.idx  LinuxUtils.cpp.499A23A4B218BCFE.idx  LinuxUtils.cpp.92968EB76FA41AF2.idx  Log.hpp.284B281B5A7695F6.idx  Log.hpp.F5232E695EAFF6F0.idx  MeshRenderer.hpp.9BDB8ABBCAB8C3C2.idx  MeshRenderer.hpp.D396C7092BE0D784.idx  Name.hpp.0A2D8F82C0DC9F0C.idx  Name.hpp.C0A190174D3CA332.idx  PlatformUtils.hpp.36EB49D2ECB3F1E4.idx  PlatformUtils.hpp.3863AF566F525237.idx  Project.cpp.8AE74A19CB4CFFCC.idx  Project.hpp.CB68DEFDF00C994C.idx  Relationship.hpp.58DE26827CDD010F.idx  Relationship.hpp.B4365BA1A319C143.idx  Renderer.cpp.1E3C2F57384783EB.idx  Renderer.cpp.3D3841D86B669495.idx  Renderer.hpp.81FF53E540317180.idx  Renderer.hpp.DE54E467F531959F.idx  SandboxApp.cpp.37D4E1035C0607B6.idx  SandboxApp.cpp.67EC44EC41B52C29.idx  Scene.cpp.1C12A6A4C74AA13E.idx  Scene.cpp.3F123CDDA3CA2185.idx  Scene.hpp.15EAA2C665E2B561.idx  Scene.hpp.5834D8459C9C57FB.idx  ScriptEngine.cpp.2E604C86ABC9B8F9.idx  (+1084 more)
Editor/: CMakeLists.txt
Editor/ExampleProject/: ExampleProject.kproj
Editor/assets/: dark.style
Editor/assets/scripts/: script.lua
Editor/include/: Project.hpp
Editor/include/scripting/: CodeGen.hpp
Editor/src/: AssetBrowser.hpp  EditorTheme.hpp  FontAwesome.h  Project.cpp  editor_app.cpp
Editor/src/scripting/: CMakeLists.txt  CodeGen.cpp  Foo.hpp
Editor/src/scripting/.cache/clangd/index/: Foo-generated.hpp.97B139CE709A610D.idx  Foo.hpp.952D056F98C1E25F.idx  init.cpp.BD008D8251CE8494.idx
Engine/: CMakeLists.txt
Engine/assets/scenes/: foo.scene
Engine/assets/shaders/: default.frag  default.vert
Engine/include/: Application.hpp  Core.hpp  Entity.hpp  Log.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  UUID.hpp  Version.hpp  Viewport.hpp  Window.hpp
Engine/include/components/: Camera.hpp  MeshRenderer.hpp  Name.hpp  Relationship.hpp  ScriptComponent.hpp  Transform.hpp
Engine/include/math/: mat.hpp  mat4_type.hpp  vec.hpp  vec2.hpp  vec2_type.hpp  vec3.hpp  vec3_type.hpp  vec4.hpp  vec4_type.hpp
Engine/include/rendering/: FrameBuffer.hpp
Engine/include/scripting/: ScriptEngine.hpp
Engine/include/serialize/: Components.hpp  glm.hpp
Engine/include/utils/: PlatformUtils.hpp
Engine/src/: Entity.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  UUID.cpp  Window.cpp  main.cpp
Engine/src/rendering/: FrameBuffer.cpp
Engine/src/scripting/: ScriptEngine.cpp
Engine/src/utils/: LinuxUtils.cpp
Sandbox/: CMakeLists.txt
Sandbox/assets/: Foo.hpp
Sandbox/src/: SandboxApp.cpp
